# duralog

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/: __init__.py  duralog.py  exceptions.py
