[project]
name = "duralog"
version = "1.0.0"
description = "A high-performance, thread-safe, and durable Write-Ahead Log (WAL) library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Iliyan Slavov", email = "iliyan.n.slavov@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "orjson>=3.11.3",
]

[project.urls]
Homepage = "https://github.com/slaily/duralog"
"Bug Tracker" = "https://github.com/slaily/duralog/issues"
"Source Code" = "https://github.com/slaily/duralog"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
